--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -15,22 +15,24 @@ Cloning into 'think-java-Jake4902'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[ERROR] Missing Compile Target:Date.java
 [COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-
+The current time is 19.0:39.0Seconds since midnight: 70740.0Seconds remaining in day19260.0percentage of day that has passed: 0.81875Time elapsed: 0.0-8.0
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: MISSING', 'Time: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] 
+	['Date: MISSING (- 0.17)'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -39,7 +41,8 @@ Cloning into 'think-java-Jake4902'...
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-
+Enter seconds: 
+	13 seconds = 0 hours, 0 minutes, and 13 seconds.
 <--
 	[OUTPUT OK]
 
@@ -47,11 +50,18 @@ Cloning into 'think-java-Jake4902'...
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-
+I'm thinking of a number between 1 and 100
+	(including both). Can you guess what it is?
+	Type a number: Your guess is: 13
+	The number I was thinking of is: 52
+	You were off by: 100
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: RAN, BUT TOO MANY ERRORS', 'Exercise4: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] 
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -60,33 +70,39 @@ Cloning into 'think-java-Jake4902'...
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-
+Multadd Trig = 1.0606601717798212
+	expSum(4) = 1.0640624148157594
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.80</b>
+<b>          [SCORE] <font color="green">0.83</font></b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.25</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
+  [EXPECTING TARGETS] ['Swettercise1']
 	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
