--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -15,6 +15,8 @@ Cloning into 'think-java-coleschomer'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
@@ -24,13 +26,17 @@ Cloning into 'think-java-coleschomer'...
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-
+American Format:
+	Thursday, July 16 2015
+	European Format:
+	Thursday 16 July 2015
+	
 <--
 	[OUTPUT OK]
 
-[COMPILING] Time.java
-	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: MISSING']
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: MISSING (- 0.17)']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -43,26 +49,30 @@ Cloning into 'think-java-coleschomer'...
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.25</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
+  [EXPECTING TARGETS] ['Swettercise1']
 	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
