--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -15,6 +15,8 @@ Cloning into 'think-java-1amsmith1020'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
@@ -24,7 +26,15 @@ Cloning into 'think-java-1amsmith1020'...
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-
+Friday
+	10
+	May
+	2011
+	European Style:
+	Friday 10 May 2011
+	American Style:
+	Friday, May 10, 2011
+	
 <--
 	[OUTPUT OK]
 
@@ -32,11 +42,17 @@ Cloning into 'think-java-1amsmith1020'...
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-
+Seconds since midnight:39494
+	Seconds remaining today:46906
+	Percentage of day passed:45.710648
+	Minuites passed:23
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -45,7 +61,8 @@ Cloning into 'think-java-1amsmith1020'...
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-
+Enter amount of seconds:
+	0 hours 0 minuites 13 seconds 
 <--
 	[OUTPUT OK]
 
@@ -53,11 +70,14 @@ Cloning into 'think-java-1amsmith1020'...
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-
+23
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
+[SUMMARY] 
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -68,61 +88,36 @@ Cloning into 'think-java-1amsmith1020'...
 	              ^
 	1 error
 	
-[SUMMARY] ['Multadd: COMPILE ERROR']
+[SUMMARY] 
+	['Multadd: COMPILE ERROR (- 0.10)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">0.90</font></b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
+[TESTING WITH] Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                                    ^
 	  symbol:   method isAbecedarian(String)
 	  location: class Exercise4
-	1 error
-	
------------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                                    ^
-	  symbol:   method isDoubloon(String)
-	  location: class Exercise5
 	1 error
 	
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                                    ^
-	  symbol:   method isAbecedarian(String)
-	  location: class Exercise4
-	1 error
-	
------------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
+[TESTING WITH] Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -134,44 +129,39 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[SUMMARY] 
+	['Exercise4: COMPILE ERROR (- 0.30)'
+	 'Exercise5: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.40</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
+  [EXPECTING TARGETS] ['Swettercise1']
 [COMPILING] Swettercise.java
 	[SUCCESSFUL COMPILE] Swettercise.java
-[TESTING WITH] copied SwetterciseTest
-[COMPILED TEST] copied SwetterciseTest
+[TESTING WITH] SwetterciseTest
 [COMPILING] SwetterciseTest.java
-	[ERROR] javac failed SwetterciseTest.java
- ----begin compile output------- 
-SwetterciseTest.java:77: error: cannot find symbol
-	            gotBack = Swettercise1.isPrime(num);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	SwetterciseTest.java:109: error: cannot find symbol
-	            gotBack = Swettercise1.collatzThis(num);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	SwetterciseTest.java:157: error: cannot find symbol
-	            gotBack = Swettercise1.reverseStr(input);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	3 errors
-	
------------END COMPILE-------
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+	[SUCCESSFUL COMPILE] SwetterciseTest.java
+[RUNNING] SwetterciseTest
+-->
+	[ERROR] Runtime Error @ java SwetterciseTest
+Exception in thread "main" java.lang.NullPointerException
+	<br>	at java.lang.String.<init>(String.java:166)
+	<br>	at java.lang.String.valueOf(String.java:3008)
+	<br>	at SwetterciseTest.testIsPrime(SwetterciseTest.java:107)
+	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
+	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
+	<br>
+[SUMMARY] 
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
