--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -94,12 +94,36 @@ Enter any number in seconds:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
+[COMPILING] Exercise4.java
+	[ERROR] javac failed Exercise4.java Exercise4.java:5: error: ')' expected
+			Abecedarian(String word = input.nextInt());
+			                  ^
+	Exercise4.java:5: error: illegal start of expression
+			Abecedarian(String word = input.nextInt());
+			                        ^
+	Exercise4.java:5: error: ';' expected
+			Abecedarian(String word = input.nextInt());
+			                               ^
+	Exercise4.java:5: error: ';' expected
+			Abecedarian(String word = input.nextInt());
+			                                         ^
+	Exercise4.java:8: error: <identifier> expected
+		public static void boolean Abecedarian(char a, char b, char c){
+		                  ^
+	Exercise4.java:8: error: '(' expected
+		public static void boolean Abecedarian(char a, char b, char c){
+		                   ^
+	Exercise4.java:8: error: invalid method declaration; return type required
+		public static void boolean Abecedarian(char a, char b, char c){
+		                           ^
+	7 errors
+	
 [SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
+	['Exercise4: COMPILE ERROR (- 0.30)'
 	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.20</b>
 
 <hr>
 
