--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -15,6 +15,8 @@ Cloning into 'think-java-bealarson82'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
@@ -24,7 +26,16 @@ Cloning into 'think-java-bealarson82'...
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-
+Hello World!
+	Day: tuesday
+	Date: 28
+	Month: august
+	Year: 2018
+	American Style: 
+	tuesday, august 28, 2018
+	European Style: 
+	tuesday 28 august 2018
+	
 <--
 	[OUTPUT OK]
 
@@ -32,11 +43,19 @@ Cloning into 'think-java-bealarson82'...
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-
+Number of seconds since midnight: 
+	16259
+	Number of seconds remaining in the day: 
+	70141.0
+	Percentage of the day that has passed: 
+	18.818287%
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -55,7 +74,9 @@ Cloning into 'think-java-bealarson82'...
 	  location: class Exercise4
 	1 error
 	
-[SUMMARY] ['Exercise3: COMPILE ERROR', 'Exercise4: COMPILE ERROR']
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.10)'
+	 'Exercise4: COMPILE ERROR (- 0.10)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -66,122 +87,58 @@ Cloning into 'think-java-bealarson82'...
 -->
 	[ERROR] Runtime Error @ java Multadd
 
-[SUMMARY] ['Multadd: RUNTIME ERROR']
+[SUMMARY] 
+	['Multadd: RUNTIME ERROR (- 0.08)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.15</b>
+<b>          [SCORE] 0.72</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 [COMPILING] Exercise4.java
 	[ERROR] javac failed Exercise4.java Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
 	public class exercise4 {
 	       ^
 	1 error
 	
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-./Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
-	public class exercise4 {
-	       ^
-	Ch6Ex4.java:58: error: cannot access Exercise4
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                           ^
-	  bad source file: ./Exercise4.java
-	    file does not contain class Exercise4
-	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
-	2 errors
-	
------------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  symbol:   variable Exercise5
-	  location: class Ch6Ex5
-	1 error
-	
------------END COMPILE-------
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-./Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
-	public class exercise4 {
-	       ^
-	Ch6Ex4.java:58: error: cannot access Exercise4
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                           ^
-	  bad source file: ./Exercise4.java
-	    file does not contain class Exercise4
-	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
-	2 errors
-	
------------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  symbol:   variable Exercise5
-	  location: class Ch6Ex5
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[SUMMARY] 
+	['Exercise4: COMPILE ERROR (- 0.30)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] 0.20</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
-[COMPILING] Swettercise.java
-	[ERROR] Missing Compile Target:Swettercise.java
-[TESTING WITH] copied SwetterciseTest
-[COMPILED TEST] copied SwetterciseTest
+  [EXPECTING TARGETS] ['Swettercise1']
+[COMPILING] Swettercise1.java
+	[SUCCESSFUL COMPILE] Swettercise1.java
+[TESTING WITH] SwetterciseTest
 [COMPILING] SwetterciseTest.java
-	[ERROR] javac failed SwetterciseTest.java
- ----begin compile output------- 
-SwetterciseTest.java:77: error: cannot find symbol
-	            gotBack = Swettercise1.isPrime(num);
-	                                  ^
-	  symbol:   method isPrime(int)
-	  location: class Swettercise1
-	SwetterciseTest.java:109: error: cannot find symbol
-	            gotBack = Swettercise1.collatzThis(num);
-	                                  ^
-	  symbol:   method collatzThis(int)
-	  location: class Swettercise1
-	SwetterciseTest.java:157: error: cannot find symbol
-	            gotBack = Swettercise1.reverseStr(input);
-	                                  ^
-	  symbol:   method reverseStr(String)
-	  location: class Swettercise1
-	3 errors
-	
------------END COMPILE-------
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+	[SUCCESSFUL COMPILE] SwetterciseTest.java
+[RUNNING] SwetterciseTest
+-->
+	[ERROR] Runtime Error @ java SwetterciseTest
+Exception in thread "main" java.lang.NullPointerException
+	<br>	at java.lang.String.<init>(String.java:166)
+	<br>	at java.lang.String.valueOf(String.java:3008)
+	<br>	at SwetterciseTest.testIsPrime(SwetterciseTest.java:107)
+	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
+	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
+	<br>
+[SUMMARY] 
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
