--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -15,16 +15,16 @@ Cloning into 'think-java-heypoppins'...
 	
 [GITWORK DONE]
 
+<hr>
+
 <b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[ERROR] Missing Compile Target:Date.java
-[COMPILING] Time.java
-	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: MISSING', 'Time: MISSING']
+[SUMMARY] 
+	['Date: MISSING (- 0.17)'
+	 'Time: MISSING (- 0.17)']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -33,7 +33,8 @@ Cloning into 'think-java-heypoppins'...
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-
+How many seconds?: 0 hours, 0 minutes, 13 seconds.
+	
 <--
 	[OUTPUT OK]
 
@@ -41,11 +42,16 @@ Cloning into 'think-java-heypoppins'...
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-
+What do you think my number is?: Your number was: 13
+	My number was: 10
+	You were off by: 3
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: RAN, BUT TOO MANY ERRORS', 'Exercise4: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] 
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -54,28 +60,33 @@ Cloning into 'think-java-heypoppins'...
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-
+multAdd test using 1.0, 2.0, 3.0: 5.0
+	Using multAdd: 1.0606601717798212
+	expSum: 1.2005440615054193
+	
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.67</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 2< </b>
   [DESC] Second Assignment, Ch 6
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
+[TESTING WITH] Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                                    ^
 	  symbol:   method isAbecedarian(String)
@@ -83,85 +94,24 @@ Ch6Ex4.java:58: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  symbol:   variable Exercise5
-	  location: class Ch6Ex5
-	1 error
-	
------------END COMPILE-------
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[TESTING WITH] copied Ch6Ex4
-[COMPILED TEST] copied Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                                    ^
-	  symbol:   method isAbecedarian(String)
-	  location: class Exercise4
-	1 error
-	
------------END COMPILE-------
-[TESTING WITH] copied Ch6Ex5
-[COMPILED TEST] copied Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  symbol:   variable Exercise5
-	  location: class Ch6Ex5
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[SUMMARY] 
+	['Exercise4: COMPILE ERROR (- 0.30)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] 0.20</b>
+
+<hr>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']]
-[COMPILING] Swettercise.java
-	[ERROR] Missing Compile Target:Swettercise.java
-[TESTING WITH] copied SwetterciseTest
-[COMPILED TEST] copied SwetterciseTest
-[COMPILING] SwetterciseTest.java
-	[ERROR] javac failed SwetterciseTest.java
- ----begin compile output------- 
-SwetterciseTest.java:77: error: cannot find symbol
-	            gotBack = Swettercise1.isPrime(num);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	SwetterciseTest.java:109: error: cannot find symbol
-	            gotBack = Swettercise1.collatzThis(num);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	SwetterciseTest.java:157: error: cannot find symbol
-	            gotBack = Swettercise1.reverseStr(input);
-	                      ^
-	  symbol:   variable Swettercise1
-	  location: class SwetterciseTest
-	3 errors
-	
------------END COMPILE-------
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+  [EXPECTING TARGETS] ['Swettercise1']
+[SUMMARY] 
+	['Swettercise1: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.50</b>
 
 </pre></body></html>
